feat: implement modules

--- a/inventory.yml
+++ b/inventory.yml
@@ -1,7 +1,7 @@
 hosts:
     webserver:
-        ssh_address: 192.168.1.22
-        ssh_port: 2222
-    bastion:
-        ssh_address: 192.168.1.24
+        ssh_address: 5.75.139.188
+        ssh_user: root
+        ssh_password: pipo
         ssh_port: 22
+
