--- a/inventory.yml
+++ b/inventory.yml
@@ -1,7 +1,6 @@
 hosts:
     webserver:
         ssh_address: 5.75.139.188
-        ssh_user: root
-        ssh_password: pipo
+        ssh_key_file: "/home/sihamais/.ssh/pipo"
         ssh_port: 22
 
