--- a/todos.yml
+++ b/todos.yml
@@ -1,7 +1,7 @@
-- module: apt
-  params:
-    name: curl
-    state: absent
+# - module: apt
+#   params:
+#     name: curl
+#     state: present
 
 # - module: copy
 #   params:
@@ -14,27 +14,22 @@
     src: "default.conf.j2"
     dest: "/etc/nginx/sites-enabled/default"
     vars:
-      listen_port: 9000
+      listen_port: 8000
       server_name: "_"
 
-- module: command
-  params:
-    command: |
-      echo "test" > /tmp/dummy-file
-      cat /tmp/dummy-file
+# - module: command
+#   params:
+#     command: |
+#       echo "test" > /tmp/dummy-file
+#       cat /tmp/dummy-file
 
-- module: service
-  params:
-    name: nginx
-    state: disabled
+# - module: service
+#   params:
+#     name: nginx
+#     state: started
 
-- module: apt
-  params:
-    name: curl
-    state: present
-
-- module: sysctl
-  params:
-    attribute: "net.core.somaxconn"
-    value: 8192
-    permanent: true
+# - module: sysctl
+#   params:
+#     attribute: "net.core.somaxconn"
+#     value: 8192
+#     permanent: true
