--- a/todos.yml
+++ b/todos.yml
@@ -3,19 +3,19 @@
 #     name: curl
 #     state: present
 
-# - module: copy
-#   params:
-#     src: ./public
-#     dest: /var/www/public
-#     backup: true
-
-- module: template
+- module: copy
   params:
-    src: "default.conf.j2"
-    dest: "/etc/nginx/sites-enabled/default"
-    vars:
-      listen_port: 8000
-      server_name: "_"
+    src: /home/sihamais/Desktop/newFolder
+    dest: /root/newFolder
+    backup: true
+
+# - module: template
+#   params:
+#     src: "default.conf.j2"
+#     dest: "/etc/nginx/sites-enabled/default"
+#     vars:
+#       listen_port: 8000
+#       server_name: "_"
 
 # - module: command
 #   params:
