--- a/todos.yml
+++ b/todos.yml
@@ -1,7 +1,7 @@
-# - module: apt
-#   params:
-#     name: curl
-#     state: present
+- module: apt
+  params:
+    name: curl
+    state: present
 
 - module: copy
   params:
@@ -9,27 +9,27 @@
     dest: /root/newFolder
     backup: true
 
-# - module: template
-#   params:
-#     src: "default.conf.j2"
-#     dest: "/etc/nginx/sites-enabled/default"
-#     vars:
-#       listen_port: 8000
-#       server_name: "_"
+- module: template
+  params:
+    src: "default.conf.j2"
+    dest: "/etc/nginx/sites-enabled/default"
+    vars:
+      listen_port: 8000
+      server_name: "_"
 
-# - module: command
-#   params:
-#     command: |
-#       echo "test" > /tmp/dummy-file
-#       cat /tmp/dummy-file
+- module: command
+  params:
+    command: |
+      echo "test" > /tmp/dummy-file
+      cat /tmp/dummy-file
 
-# - module: service
-#   params:
-#     name: nginx
-#     state: started
+- module: service
+  params:
+    name: nginx
+    state: started
 
-# - module: sysctl
-#   params:
-#     attribute: "net.core.somaxconn"
-#     value: 8192
-#     permanent: true
+- module: sysctl
+  params:
+    attribute: "net.core.somaxconn"
+    value: 8192
+    permanent: true
